--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,11 @@
 {
   "name": "paper-switch",
-  "version": "0.1",
+  "version": "0.2",
   "authors": [
     "Ankur Patel <ankur.patel@ymail.com>"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#~0.3.4",
-    "core-elements": "Polymer/core-elements#~0.3.4"
+    "polymer": "Polymer/polymer#~0.3.4"
   },
   "description": "Switch component for Polymer",
   "license": "MIT",
